...
                        }
                    }
                }
                
                Section(header: Text("Color Mode")) {
                    Toggle(isOn: $isPrivate) {
                        Text("Dark Mode")
                    }
                    .toggleStyle(DarkModeToggleStyle())
                }
                
                Section(header: Text("ABOUT")) {
                    HStack {
...
